# configdna

./: README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: after.cfg  before.cfg
src/configdna/: __init__.py  cli.py  core.py
tests/: test_configdna.py  test_core.py
