[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "configdna"
version = "0.2.0"
description = "Normalize, fingerprint and semantically compare network configurations."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [{name = "John Johansson"}]
keywords = ["network-automation", "configuration", "semantic-diff", "cisco"]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.5"]

[project.scripts]
configdna = "configdna.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/configdna"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
